# flagon

./: .asf.yaml  .envrc  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  KEYS  LICENSE  NOTICE  README.md  buf.gen.yaml  buf.yaml  doap_flagon.rdf  docker-compose.yml  eslint.config.js  feed.xml  flake.nix  index.html  jaeger.yaml  lefthook.yml  package-lock.json  package.json
products/distill/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  install_py_versions.sh  poetry.toml  pyproject.toml  pytest_prev_init.ini  setup.cfg  setup.py  tox.ini
products/distill/Dashboard/: app.py  example_segments.csv  index.py
products/distill/Dashboard/assets/: bootstrap.min.css  style.css
products/distill/Dashboard/pages/: bar_chart.py  bubble.py  gantt.py  home.py  pie.py  upload.py  upload_tst.py
products/distill/distill/: __init__.py  __version__.py
products/distill/distill/analytics/graph/: README.md  conf.py  graph.py
products/distill/distill/analytics/stat/: __init__.py  stats.py
products/distill/distill/core/: feature_definition.py  log.py  types.py
products/distill/distill/process/: search.py  transform.py
products/distill/distill/schemas/: base.py  userale.py
products/distill/distill/segmentation/: README.rst  segment.py  segmentation_error.py  segments.py
products/distill/distill/sessions/: session.py  sessions.py  utils.py
products/distill/distill/utils/: crud.py
products/distill/docs/: Combining_Segments_with_Set_Logic.md  Combining_Segments_with_Set_Logic.rst  Creating_Segments.md  Creating_Segments.rst  Example_Usage.md  Example_Usage.rst  Exporting_Segments.md  Exporting_Segments.rst  Funnel_Function.md  Funnel_Function.rst  Getting_Started.md  Getting_Started.rst  Graph_Index.md  Graph_Index.rst  Makefile  Manipulating_Collections_of_Segment_Objects.md  Manipulating_Collections_of_Segment_Objects.rst  Process.md  Process.rst  Process_Docs.md  Process_Docs.rst  Sankey_Function.md  Sankey_Function.rst  Segmentation.md  Segmentation.rst  Utilities.md  Utilities.rst  Utility_Functions.md  Utility_Functions.rst  Writing_Segments.md  Writing_Segments.rst  conf.py  index.md  index.rst  make.bat  requirements.txt
products/distill/docs/docs/: .buildinfo  .buildinfo 2  Combining_Segments_with_Set_Logic.html  Creating_Segments.html  Example 2.html  Example.html  Example_Usage.html  Exporting_Segments.html  Funnel_Function.html  Getting_Started.html  Graph 2.html  Graph.html  Graph_Index.html  Manipulating_Collections_of_Segment_Objects.html  Process.html  Process_Docs.html  Sankey_Function.html  Segmentation.html  Utilities.html  Utility_Functions.html  Writing_Segments.html  genindex.html  index.html  objects 2.inv  objects.inv  search 2.html  search.html  searchindex 2.js  searchindex.js
products/distill/docs/docs/.doctrees/: Combining_Segments_with_Set_Logic.doctree  Creating_Segments.doctree  Example.doctree  Example_Usage.doctree  Exporting_Segments.doctree  Funnel_Function.doctree  Getting_Started.doctree  Graph_Index.doctree  Manipulating_Collections_of_Segment_Objects.doctree  Process.doctree  Process_Docs.doctree  Sankey_Function.doctree  Segmentation.doctree  Utilities.doctree  Utility_Functions.doctree  Writing_Segments.doctree  distill.segmentation.combining_segments_with_set_logic.doctree  distill.segmentation.creating_segments.doctree  distill.segmentation.exporting_segments.doctree  distill.segmentation.getting_started.doctree  distill.segmentation.manipulating_collections_of_segment_objects.doctree  distill.segmentation.writing_segments.doctree  environment.pickle  index.doctree
products/distill/docs/docs/_sources/: Combining_Segments_with_Set_Logic.rst.txt  Example.rst.txt  Example_Usage.rst.txt  Exporting_Segments.rst.txt  Funnel_Function.rst.txt  Getting_Started.rst.txt  Graph.rst.txt  Graph_Index.rst.txt  Manipulating_Collections_of_Segment_Objects.rst.txt  Process.rst.txt  Process_Docs.rst.txt  Sankey_Function.rst.txt  Segmentation.rst.txt  Utilities.rst.txt  Utility_Functions.rst.txt  distill.segmentation.combining_segments_with_set_logic.rst.txt  distill.segmentation.creating_segments.rst.txt  distill.segmentation.exporting_segments.rst.txt  index copy.rst.txt  (+4 more)
products/distill/examples/: Distill_Workflow_Example.ipynb  Segments_Demo.ipynb  SuperSet_ElasticDSL_Demo.ipynb  TestPipeline.ipynb  labels.py
products/distill/examples/data/: task_example.json
products/distill/tests/: README.rst  __init__.py  data_config.py  example.csv  test_graph.py  test_log.py  test_search.py  test_segment.py  test_segments.py  test_sessions.py  test_transform.py  test_utils.py  testing_utils.py
products/distill/tests/data/: deadspace_detection_sample_data.json  log_interval_data.json  log_test_data.json  sample_data.json  sample_data_multiusers.json  sample_data_without_type.json  segment_generator_sample_data.json
(+570 files in other folders)
